@@ -100,6 +100,7 @@
     restarted.
 61. Add 'Add To Playlist' menu item to playlists page.
 62. Add 'Table' style view for playlists.
+63. Clicking on title list/icon view navigates back.
 
 1.2.2
 -----
